# opencl-in-action

./: CMakeLists.txt  README.md
ext/libpng/lib/: libpng.lib  zlib.lib
src/: CMakeLists.txt
src/03/: CMakeLists.txt
src/03/buffer_check/: CMakeLists.txt  buffer_check.cpp
src/03/buffer_test/: CMakeLists.txt  buffer_test.cpp
src/03/map_copy/: CMakeLists.txt  map_copy.cpp
src/04/: CMakeLists.txt
src/04/double_test/: CMakeLists.txt  double_test.cl  double_test.cpp
src/04/float_config/: CMakeLists.txt  float_config.cpp
src/04/hello_kernel/: CMakeLists.txt  hello_kernel.cl  hello_kernel.cpp
src/05/: CMakeLists.txt
src/05/id_check/: CMakeLists.txt  id_check.cl  id_check.cpp
src/06/: CMakeLists.txt
src/06/interp/: CMakeLists.txt  interp.cl  interp.cpp
src/06/simple_image/: CMakeLists.txt  simple_image.cl  simple_image.cpp
src/07/: CMakeLists.txt
src/07/callback/: CMakeLists.txt  callback.cl  callback.cpp
src/07/profile_items/: CMakeLists.txt  profile_items.cl  profile_items.cpp
src/07/profile_read/: CMakeLists.txt  profile_read.cl  profile_read.cpp
src/07/user_event/: CMakeLists.txt  user_event.cl  user_event.cpp
src/08/buffer_test/: CMakeLists.txt  buffer_test.cl  buffer_test.cpp
src/08/callback/: CMakeLists.txt  callback.cl  callback.cpp
src/08/create_kernel/: CMakeLists.txt  create_kernel.cl  create_kernel.cpp
src/08/full_context/: CMakeLists.txt  full_context.cpp
src/08/map_copy/: CMakeLists.txt  map_copy.cl  map_copy.cpp
src/08/profile/: CMakeLists.txt  profile.cl  profile.cpp
src/08/sub_buffer/: CMakeLists.txt  sub_buffer.cl  sub_buffer.cpp
src/08/user_event/: CMakeLists.txt  user_event.cl  user_event.cpp
src/10/reduction/: CMakeLists.txt  reduction.cl  reduction.cpp
src/10/reduction_complete/: CMakeLists.txt  reduction_complete.cl  reduction_complete.cpp
src/10/wg_test/: CMakeLists.txt  wg_test.cl  wg_test.cpp
